<resources>
    <string name="app_name">MyScse</string>
    <string name="login_label">Login</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">关于MyScse</string>

    <!--登陆界面-->
    <string name="login_submit_title">登 陆</string>
    <string name="login_idCard">学号</string>
    <string name="login_password">密码</string>

    <string name="profile_title">MyScse个人信息</string>

    <!--home-->
    <string name="home_menu_item_classes">课表</string>
    <string name="home_menu_item_attendance">考勤</string>
    <string name="home_menu_item_exam">考试</string>
    <string name="home_menu_item_grade">成绩</string>
    <string name="home_menu_item_menu">菜单</string>


    <!--home_viewpager_one-->
    <string name="month">5月</string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>

    <!--home_viewpager_one-->
    <string name="tv_value">当前学期</string>
    <string name="bt_value">查看</string>
    <string name="class_id">课程编号</string>
    <string name="class_name">课程名称</string>
    <string name="detail_inform">详细信息</string>

    <!--content_course_detail-->
    <string name="course_inform">课程信息</string>
    <string name="course_class_time">上课时间</string>
    <string name="course_name">名称</string>
    <string name="course_room">教室</string>
    <string name="course_teacher">老师</string>
    <string name="course_num">节数</string>
    <string name="course_week">周数</string>
    <string name="course_time">时间</string>


    <!--settings-->
    <string name="setting_item_currency">通用</string>

    <!--Guide-->
    <string name="guide_button_text">开始校园</string>

    <!--about-->
    <string name="about_app_name">软件简称</string>
    <string name="about_app_code">版本号</string>
    <string name="about_app_idea">回馈建议</string>
    <string name="about_app_update">检查更新</string>

    <!--credit-->
    <string name="credit_title">学分情况</string>
    <string name="credit_obligatoryGradeAll">必修总学分</string>
    <string name="credit_obligatoryGraded">必修已获得学分</string>
    <string name="credit_optionGradeAll">选修总学分</string>
    <string name="credit_optionGraded">选修已获得学分</string>
    <string name="credit_graded">已修学分</string>
    <string name="credit_grading">在读课程学分</string>
    <string name="credit_optionCourseGrade">已选课程学分</string>
    <string name="credit_expectedGrade">预期获得学分</string>
    <string name="credit_averagePoint">平均学分绩点</string>
    <string name="credit_gradeAll">本专业本年级毕业需修满学分</string>

    <!--提醒-->
    <string name="course_remind_title">提醒功能设置</string>
    <string name="course_remind_name">课程提醒</string>
</resources>
