<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--模拟一个toolbar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_fifty_five"
        android:background="@color/colorPrimary"
        android:paddingEnd="@dimen/dimen_ten"
        android:paddingStart="@dimen/dimen_ten">

        <View
            android:id="@+id/credit_back_icon"
            android:layout_width="@dimen/dimen_twenty"
            android:layout_height="@dimen/dimen_twenty"
            android:layout_gravity="start|center_vertical" />

        <TextView
            android:id="@+id/credit_toolbar_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_sixteen"
            android:text="@string/credit_title"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_ten"
            android:layout_marginStart="@dimen/dimen_ten"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_obligatoryGradeAll" />
                <TextView
                    android:id="@+id/credit_obligatoryGradeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_obligatoryGraded"/>


                <TextView
                    android:id="@+id/credit_obligatoryGraded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_optionGradeAll" />
                <TextView
                    android:id="@+id/credit_optionGradeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_optionGraded" />
                <TextView
                    android:id="@+id/credit_optionGraded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_graded" />


                <TextView
                    android:id="@+id/credit_graded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_grading" />
                <TextView
                    android:id="@+id/credit_grading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_optionCourseGrade" />
                <TextView
                    android:id="@+id/credit_optionCourseGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_expectedGrade" />
                <TextView
                    android:id="@+id/credit_expectedGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_averagePoint" />
                <TextView
                    android:id="@+id/credit_averagePoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_fifty"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/credit_gradeAll" />
                <TextView
                    android:id="@+id/credit_gradeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

